<resources>
    <string name="app_name">testProjectPizza</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="cart">Корзина</string>
    <string name="qr">qr</string>
    <string name="moscow">Москва</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adds1">adds1</string>
    <string name="adds2">adds2</string>
    <string name="dummy_text">A libero per viverra a massa at eleifend curae; laoreet mollis sollicitudin augue massa habitant dictumst facilisis ultrices sed cras justo ridiculus imperdiet pellentesque orci litora sapien curae; habitant potenti cursus potenti egestas gravida conubia pharetra. Dictum dis nec non. Ligula metus nec varius adipiscing convallis vestibulum sapien aptent urna pulvinar dictum quisque vestibulum etiam, euismod, rutrum elit sociosqu tempus sem velit dapibus semper ad natoque tellus tincidunt hymenaeos vehicula pulvinar posuere ridiculus sapien nec. Sollicitudin Nulla vehicula sapien. Facilisis condimentum cursus ante. Integer, placerat dictumst aliquet. Nullam vitae magnis dui. Cursus nibh sed fringilla eu adipiscing libero a tempus. Etiam euismod. Leo enim bibendum, dapibus varius nullam purus ut nunc Id commodo habitasse augue et curae; tellus suspendisse. Et luctus dictum. Hymenaeos commodo magnis aliquam, nostra quisque. Facilisis cursus taciti maecenas ridiculus ut nibh cubilia, blandit vitae cras dictumst ante nunc dignissim fames phasellus dui orci cum. Aptent, inceptos sem auctor vehicula Netus vel. Viverra libero lacus euismod tristique id cum euismod sociis nullam arcu hendrerit platea vivamus praesent cum accumsan magnis duis aenean condimentum ante lacus elementum duis sapien eget per.  Ligula suscipit facilisis arcu. Nunc tristique aptent tortor per nisi lorem pellentesque laoreet tincidunt est quisque pretium ridiculus nonummy metus aenean neque dolor magnis. Non quam. Platea facilisis orci, class. Erat gravida justo cursus, hymenaeos est placerat per vivamus cras. Hymenaeos vulputate orci risus. Nisi libero quisque pharetra sed dignissim metus cubilia pede inceptos phasellus nonummy dictumst erat neque pretium nostra condimentum nonummy nullam. Curae; nonummy varius auctor in ipsum a. Nisl. Neque nisl natoque interdum feugiat vel. Id commodo tempor at lacus urna hendrerit, dis sociosqu potenti eleifend. Libero aliquam nam, placerat suscipit viverra amet. Posuere malesuada. Cum porttitor. Dictum lobortis eu lacinia eros pretium proin mattis mi tellus cras pede volutpat aenean. Eleifend nulla. Felis per at curae;. Facilisi curae; magnis. Maecenas scelerisque. Metus, sodales porttitor dignissim bibendum, ut sed ac placerat fringilla. Elementum molestie torquent duis suspendisse nec fringilla etiam Adipiscing pharetra volutpat augue torquent quis felis luctus sem dapibus accumsan, metus. Luctus dictumst. Egestas arcu ultricies nam. Dapibus urna vehicula euismod rutrum per hendrerit sem primis, vehicula. Facilisis bibendum, odio quam suscipit integer. Ullamcorper pede sollicitudin neque habitasse nisi mattis tristique. Non proin habitant. Inceptos fusce molestie eros sapien rutrum nostra at fusce sapien cras, etiam sem dapibus Donec conubia mollis orci pharetra gravida est lobortis. Posuere, magnis id. Et. Odio. Ad class auctor bibendum penatibus Praesent faucibus. Eros parturient odio suscipit dolor fusce class ornare praesent. Sodales laoreet platea tempus consequat ridiculus et. Dui, commodo lacinia quis dignissim facilisi netus ac metus lacus erat. Augue fringilla velit rhoncus. Augue ligula per lobortis luctus class non dui ut placerat luctus. Non mollis aliquam interdum. Aliquet inceptos sociosqu augue senectus cum nisl neque orci non, amet donec cubilia libero est pellentesque facilisi dolor nisi feugiat. Magna maecenas sit. Vitae neque facilisi sagittis dui lacinia quisque. Lectus ante. Nascetur nostra, vitae. Semper facilisi suscipit diam tristique erat. Nulla cubilia. Habitasse dui justo habitasse enim. Nibh inceptos adipiscing. Netus quisque ridiculus blandit posuere penatibus ad turpis est dignissim cubilia. Mi ridiculus nam. Hac nec aliquet neque. Dapibus ac pellentesque quis conubia. Ornare blandit varius donec metus eleifend blandit semper sagittis augue dapibus suscipit, aenean platea neque habitant.  Nonummy nisi congue. Imperdiet placerat. Per cursus, quisque semper donec tristique litora nunc auctor venenatis. Cras praesent lorem suscipit ornare montes cursus netus. Sollicitudin eleifend. Eu. Senectus a magnis praesent leo a montes adipiscing accumsan. Curae; ac habitasse lacinia. Augue suspendisse velit fermentum congue massa massa class Malesuada lorem. Gravida id dignissim nam justo tristique nulla. Bibendum commodo. Sed. Netus Id odio tellus hendrerit. Ut sociosqu facilisi congue. Ornare iaculis, commodo nec posuere mi hac. Ornare rutrum suscipit curabitur adipiscing nonummy ullamcorper eleifend pretium. Sapien senectus per eleifend ridiculus, dis maecenas. Suspendisse dapibus nascetur, euismod lacus sapien. Facilisi blandit proin leo per convallis platea curabitur aliquet fermentum parturient habitant gravida sed molestie nulla tristique tortor potenti lacinia. Turpis condimentum semper eleifend posuere primis fames etiam tempor facilisi porta tincidunt ipsum risus, parturient per montes integer nostra venenatis praesent. Potenti sapien. Pretium neque odio tempor torquent hendrerit neque eu et conubia iaculis fermentum. Tempor turpis rutrum inceptos duis class, augue orci enim adipiscing nulla hymenaeos feugiat. Sociosqu consequat consectetuer. Sodales integer natoque senectus varius donec vestibulum metus aptent felis enim senectus arcu venenatis. Magnis suscipit praesent aptent purus vestibulum vehicula vestibulum mollis condimentum, fames fames vehicula tempus ante nam venenatis sociis vel habitant mus gravida. Consequat nunc. Lobortis. Eu pharetra. Lorem at non odio. Montes curae; tortor Ridiculus consectetuer pellentesque habitasse litora quis laoreet odio tristique sem lacinia Enim vehicula inceptos mauris molestie habitant pretium pretium lacus sapien aliquam neque vestibulum, vulputate laoreet facilisis neque, non aliquam parturient massa auctor inceptos pharetra viverra diam molestie sed nullam tempor pretium et. Hendrerit Dis duis sem mattis dignissim gravida sed est egestas dignissim habitant cras pellentesque. Suspendisse facilisi integer potenti. Non. Eget pharetra nisl, semper eu aliquet rhoncus potenti rhoncus mauris mattis litora. Habitasse tempor venenatis imperdiet varius tellus dictumst, primis lectus penatibus. Class Cras. A. Pellentesque sociis pharetra interdum vel. Sagittis justo, dui netus, taciti ornare feugiat auctor. Donec molestie vivamus vivamus urna morbi cursus placerat sed class felis ligula fringilla phasellus est pede posuere ornare eros porta senectus fermentum dui dapibus varius lectus. Tristique dolor tempus iaculis adipiscing condimentum turpis sociosqu. Porta aliquam nunc. Potenti enim lorem nascetur. Congue quam potenti, vivamus sodales sociis nec taciti lectus, sem, tellus sociis eros mauris. Nam. Fermentum est Pretium mi hymenaeos aptent per nisi viverra convallis Egestas morbi egestas. Et semper, ultricies dapibus consectetuer mattis. Nulla pharetra. Libero nostra ligula egestas, sed arcu vel orci neque nullam nostra sapien eros nascetur urna per. Pretium litora urna dictum curabitur. Tincidunt semper tristique tellus sollicitudin posuere augue donec convallis habitasse non hymenaeos dis tempus magnis pellentesque. Orci adipiscing id Pharetra integer aliquam dui ligula leo. Pellentesque luctus blandit urna nunc elementum, sollicitudin integer commodo fusce vitae ante. Quisque fames congue metus ornare lectus pulvinar auctor.</string>
    <string name="pizza">Пицца</string>
    <string name="combo">Комбо</string>
    <string name="deserts">Десерты</string>
    <string name="drinks">Напитки</string>
</resources>