<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.fragments.MenuFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">


        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/white"
            app:layout_scrollFlags="scroll"

            app:title="Collapsed">


            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:backgroundTint="@null">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:backgroundTint="@null"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/imageButtonAds1"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        android:background="@null"
                        android:contentDescription="@string/adds1"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_horizontal_collapsed_first" />

                    <ImageButton
                        android:id="@+id/imageButtonAds2"
                        android:layout_width="330dp"
                        android:layout_height="140dp"
                        android:background="@null"
                        android:contentDescription="@string/adds2"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/ic_horizontal_collapsed_second" />
                </LinearLayout>
            </HorizontalScrollView>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"

            android:orientation="horizontal"
            android:padding="8dp">


            <Button
                android:id="@+id/btnPizza"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"

                android:layout_weight="1"
                android:text="@string/pizza"
                android:textColor="#555"


                />

            <Button
                android:id="@+id/btnCombo"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/combo"
                android:textColor="#555" />

            <Button
                android:id="@+id/btnDeserts"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/deserts"
                android:textColor="#555" />

            <Button
                android:id="@+id/btnDrinks"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:text="@string/drinks"
                android:textColor="#555" />
        </LinearLayout>


    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="65dp"
        android:layout_height="match_parent">

        <ProgressBar

            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>